Fixed dark mode issue

--- a/frontend-react/src/index.css
+++ b/frontend-react/src/index.css
@@ -5,7 +5,7 @@ html, body, #root {
   width: 100%;
   margin: 0;
   padding: 0;
-  background-color: #111827; /* matches bg-gray-900 */
+  background-color: #111827; 
 }
 
 
@@ -53,7 +53,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #f9f9f9;
   cursor: pointer;
   transition: border-color 0.25s;
 }
